--- a/.github/workflows/qa.yaml
+++ b/.github/workflows/qa.yaml
@@ -44,6 +44,11 @@ jobs:
           go get .
           go mod tidy
           cd ../../../
+
+          cd src_go/search/initiate
+          go get .
+          go mod tidy
+          cd ../../../
           
       - name: GO - Build
         shell: bash
@@ -51,7 +56,9 @@ jobs:
           GOOS=linux GOARCH=arm64 CGO_ENABLED=0 go build -v -o ./src_go/download/check_status/bootstrap -tags lambda.norpc ./src_go/download/check_status/.
           GOOS=linux GOARCH=arm64 CGO_ENABLED=0 go build -v -o ./src_go/download/initiate/bootstrap -tags lambda.norpc ./src_go/download/initiate/.
           GOOS=linux GOARCH=arm64 CGO_ENABLED=0 go build -v -o ./src_go/search/check_status/bootstrap -tags lambda.norpc ./src_go/search/check_status/.
-
+          cd ./src_go/search/initiate
+          GOOS=linux GOARCH=amd64 CGO_ENABLED=1 go build -v -o bootstrap -tags lambda.norpc .
+          cd ../../../
       
       - name: SCALA - Packaging Code
         shell: bash
@@ -71,6 +78,10 @@ jobs:
 
           cd ./src_go/search/check_status
           zip check_status.zip bootstrap
+          cd ../../../
+
+          cd ./src_go/search/initiate
+          zip initiate.zip bootstrap validation/chess-finder-core_dynamic.h validation/chess-finder-core.h validation/graal_isolate_dynamic.h validation/graal_isolate.h validation/chess-finder-core.so
           cd ../../../
           
       - name: setup SAM
