--- a/.github/workflows/qa.yaml
+++ b/.github/workflows/qa.yaml
@@ -7,8 +7,12 @@ on:
 jobs:
   build:
     name: Compile, Build and Deploy QA
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-20.04
     steps:
+      - name: Check GLIGC version
+        shell: bash
+        run: |
+          ldd --version 
       - name: Checkout Code
         uses: actions/checkout@v2
       
@@ -82,6 +86,7 @@ jobs:
 
           cd ./src_go/search/initiate
           zip initiate.zip bootstrap validation/chess-finder-core_dynamic.h validation/chess-finder-core.h validation/graal_isolate_dynamic.h validation/graal_isolate.h validation/chess-finder-core.so
+          # zip initiate.zip bootstrap
           cd ../../../
           
       - name: setup SAM
