--- a/.github/workflows/prod.yaml
+++ b/.github/workflows/prod.yaml
@@ -125,6 +125,11 @@ jobs:
           go mod tidy
           cd ../../../
 
+          cd src_go/download/process
+          go get .
+          go mod tidy
+          cd ../../../
+
           cd src_go/search/check_status
           go get .
           go mod tidy
@@ -140,6 +145,7 @@ jobs:
         run: |
           GOOS=linux GOARCH=arm64 CGO_ENABLED=0 go build -v -o ./src_go/download/check_status/bootstrap -tags lambda.norpc ./src_go/download/check_status/.
           GOOS=linux GOARCH=arm64 CGO_ENABLED=0 go build -v -o ./src_go/download/initiate/bootstrap -tags lambda.norpc ./src_go/download/initiate/.
+          GOOS=linux GOARCH=arm64 CGO_ENABLED=0 go build -v -o ./src_go/download/process/bootstrap -tags lambda.norpc ./src_go/download/process/.
           GOOS=linux GOARCH=arm64 CGO_ENABLED=0 go build -v -o ./src_go/search/check_status/bootstrap -tags lambda.norpc ./src_go/search/check_status/.
           cd ./src_go/search/initiate
           GOOS=linux GOARCH=amd64 CGO_ENABLED=1 go build -v -o bootstrap -tags lambda.norpc .
@@ -154,6 +160,10 @@ jobs:
 
           cd ./src_go/download/initiate
           zip initiate.zip bootstrap
+          cd ../../../
+
+          cd ./src_go/download/process
+          zip process.zip bootstrap
           cd ../../../
 
           cd ./src_go/search/check_status
