--- a/.github/workflows/pull_request.yaml
+++ b/.github/workflows/pull_request.yaml
@@ -84,6 +84,11 @@ jobs:
           go mod tidy
           cd ../../../
 
+          cd src_go/download/process
+          go get .
+          go mod tidy
+          cd ../../../
+
           cd src_go/search/check_status
           go get .
           go mod tidy
@@ -93,6 +98,7 @@ jobs:
           go get .
           go mod tidy
           cd ../../../     
+          
       
       - name: Install AWS CLI
         shell: bash
@@ -118,10 +124,15 @@ jobs:
           sleep 10s          
           awslocal  s3api create-bucket --bucket chessfinder
           # samlocal deploy --template-file template_resources.yaml --stack-name chessfinder --capabilities CAPABILITY_NAMED_IAM CAPABILITY_AUTO_EXPAND --s3-bucket chessfinder
-          samlocal deploy --template-file .infrastructure/db.yaml --stack-name chessfinder_dyanmodb --capabilities CAPABILITY_NAMED_IAM CAPABILITY_AUTO_EXPAND --s3-bucket chessfinder
+          samlocal deploy --template-file .infrastructure/db.yaml --stack-name chessfinder_dynamodb --capabilities CAPABILITY_NAMED_IAM CAPABILITY_AUTO_EXPAND --s3-bucket chessfinder
           samlocal deploy --template-file .infrastructure/queue.yaml --stack-name chessfinder_sqs --capabilities CAPABILITY_NAMED_IAM CAPABILITY_AUTO_EXPAND --s3-bucket chessfinder
+          go test ./src_go/details/db/... -v
+          go test ./src_go/details/api/... -v
+          go test ./src_go/details/queue/... -v
+          
           go test ./src_go/download/check_status/... -v
           go test ./src_go/download/initiate/... -v
+          go test ./src_go/download/process/... -v
           go test ./src_go/search/check_status/... -v
           cd src_go/search/initiate
           go test ./... -v
